--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "qrcode.vue": "^3.3.3",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.0.3",
