--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starshark_monitor.vue",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -20,6 +20,7 @@
     "qrcode.vue": "^3.3.3",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "web3": "^1.7.1"
