--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starshark_monitor.vue",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -14,6 +14,7 @@
     "@popperjs/core": "^2.11.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "codemirror-editor-vue3": "^2.0.6",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
